--- a/tracker/templates/tracker/partials/transaction-container.html
+++ b/tracker/templates/tracker/partials/transaction-container.html
@@ -1,9 +1,49 @@
 {% load widget_tweaks %}
+{% load humanize %}
 
 <div class="flex flex-col-reverse md:grid md:grid-cols-4 md:gap-4"
     id="transaction-container">
     <!-- 3/4 cols for the table of transactions-->
      <div class="col-span-3">
+      <div class="my-4">
+        <h1 class="mt-4 mb-4 prose prose-2xl text-white">
+          Totals
+        <h1>
+        <table class="table">
+          <thead class="text-xs text-white uppercase">
+            <tr>
+              <th>Total Income</th>
+              <th>Total Expenses</th>
+              <th>Net Income</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>{{ total_income|floatformat:2|intcomma }}</td>
+              <td>{{ total_expenses|floatformat:2|intcomma }}</td>
+              <td>{{ net_income|floatformat:2|intcomma }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="flex justify-between items-center mt-4 mb-6">
+        <h1 class="mt-4 mb-4 prose prose-2xl text-white">
+          Transactions
+        <h1>
+
+        <a hx-get="{% url 'create-transaction' %}"
+            hx-push-url='true'
+            hx-target='#transaction-block'
+            class="cursor-pointer">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="green" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+              </svg>
+          </a>
+          
+      </div>
+      
         {% if filter.qs %}
           <table class='table'>
               <thead class="text-xs text-white uppercase">
@@ -41,6 +81,20 @@
         <div class="mb-2 form-control">
           {{ filter.form.transaction_type|add_label_class:"label text-white"}}
           {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900" %}
+        </div>
+
+        <div class="mb-2 form-control">
+          {{ filter.form.start_date|add_label_class:"label text-white"}}
+          {% render_field filter.form.start_date class="input bg-gray-50 text-gray-900" %}
+        </div>
+
+        <div class="mb-2 form-control">
+          {{ filter.form.end_date|add_label_class:"label text-white"}}
+          {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900" %}
+        </div>
+
+        <div class="mb-4 form-control">
+          {% render_field filter.form.category class="text-green-500 border-gray-300 rounded focus:ring-green-500" %}
         </div>
 
         <button class="btn btn-success">
